<resources>
    <string name="app_name">JPF</string>
    <string name="map_api_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="search_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Inviald Email</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="please_enter_code_sent_to">Please Enter Code Sent To You</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="notifications">Notifications</string>
    <string name="ok">Ok</string>
    <string name="failed">Faild</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="points">Points</string>
    <string name="award">Award</string>
    <string name="galleries">Galleries</string>
    <string name="departments">Departments</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="name">Name</string>
    <string name="first">First</string>
    <string name="seconed">Seconed</string>
    <string name="third">Third</string>
    <string name="previous_award">previous award</string>
    <string name="current_points">Current points</string>
    <string name="purchase_orders">Purchase orders</string>
    <string name="personal_information">Personal information</string>
    <string name="more">More</string>
    <string name="about_us">About us</string>
    <string name="please_scan_the_code_on_the_product_to_add_points">Please scan the code on the product to add points</string>
    <string name="national_number">National Number</string>
    <string name="enter_the_14_digit_number">Enter the 14-digit number</string>
    <string name="governorate">Governorate</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="current_location">Current Location</string>
    <string name="start">Start</string>
    <string name="ch_gove">Choose Governorate</string>
    <string name="ch_area">Choose Area</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="update_profile">Update Profile</string>
    <string name="details">Details</string>
    <string name="total_points">Total points</string>
    <string name="exchanged_points">Exchanged points</string>
    <string name="history">History</string>
    <string name="last_month">Last month</string>
    <string name="paints">Paints</string>
    <string name="product_detials">Product Detials</string>
    <string name="available_colors">Available Colors</string>
    <string name="no_image">No Images</string>
    <string name="wait">Wait</string>
    <string name="user_blocked">User Blocked</string>
    <string name="country_code">Country Code</string>
    <string name="egypt">Egypt</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="select_location_on_map">Select Location On Map</string>
    <string name="user_exist">Phone Exist</string>
    <string name="select">Select</string>
    <string name="point">Point</string>
    <string name="exchange_points">Exchange points?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="we_will_contact">We will contact you for award</string>
    <string name="no_enough_points">No enough points</string>
    <string name="show_location_on_map">Show location on map</string>
    <string name="qr_used">QrCode already used</string>
    <string name="no_pro_found">No product found</string>
    <string name="not_ava">Not available</string>
    <string name="back">Back</string>
    <string name="egp">EGP</string>
    <string name="logout">Logout</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="enter_barcode">Enter barcode</string>
    <string name="edit_location">Edit Location</string>
    <string name="succ">updated seccess</string>
    <string name="yemen">Yemen</string>
    <string name="jepoty">Djibouti</string>
    <string name="somal_land">somalialand</string>
    <string name="somalia">Somalia</string>
    <string name="comors">State of the Comoros</string>
    <string name="oman">Oman</string>
</resources>