<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >
    <data>
        <variable
            name="lang"
            type="String" />
        <variable
            name="model"
            type="com.app.jpf.models.UserModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                >
                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_left_arrow"
                        android:padding="3dp"
                        android:rotation='@{lang.equals("ar")?180:0}'
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="@string/points"

                        />
                </LinearLayout>



            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/gray14"
                            android:text="@string/total_points"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="22sp"
                            android:layout_marginTop="8dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:textColor="@color/color4"
                            android:text="@{String.valueOf(model.data.total_points_balance)}"
                            android:textStyle="bold"
                            android:singleLine="true"
                            android:background="@drawable/rounded_color6"
                            />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/gray14"
                            android:text="@string/exchanged_points"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="22sp"
                            android:layout_marginTop="8dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:textColor="@color/colorPrimary"
                            android:text="@{String.valueOf(model.data.exchange_points_balance)}"
                            android:textStyle="bold"
                            android:singleLine="true"
                            android:background="@drawable/rounded_color9"
                            />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/gray14"
                            android:text="@string/current_points"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="22sp"
                            android:layout_marginTop="8dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:textColor="@color/color5"
                            android:text="@{String.valueOf(model.data.current_points_balance)}"
                            android:textStyle="bold"
                            android:singleLine="true"
                            android:background="@drawable/rounded_color10"
                            />


                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:background="@color/gray1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    >
                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/colorPrimary"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/history"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_calender"
                        android:padding="3dp"
                        android:layout_marginStart="50dp"
                        />
                    <TextView
                        android:id="@+id/tvDatefrome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:singleLine="true"
                        android:textSize="14sp"
                        android:text="@string/from"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"/>

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_calender"
                        android:padding="3dp"
                        android:layout_marginStart="50dp"

                        />
                    <TextView
                        android:id="@+id/tvDateto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@string/to"
                        android:singleLine="true"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"/>
                </LinearLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <ProgressBar
                        android:id="@+id/progBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="40dp"
                        android:visibility="gone"
                        />
                    <TextView
                        android:id="@+id/tvNoData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/no_data_to_show"
                        android:layout_marginBottom="40dp"
                        android:visibility="gone"
                        />
                </FrameLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>




    </LinearLayout>


</layout>
