<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="lang"
            type="String" />

        <variable
            name="model"
            type="com.app.jpf.models.UserModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <LinearLayout
                        android:id="@+id/llBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:padding="3dp"
                            android:rotation='@{lang.equals("ar")?180:0}'
                            android:src="@drawable/ic_left_arrow" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/award"
                            android:textColor="@color/black"
                            android:textSize="16sp"

                            />
                    </LinearLayout>


                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/color10"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/cup" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/current_points"
                    android:textColor="@color/gray14"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{String.valueOf(model.data.current_points_balance)}"
                    android:textColor="@color/color5"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ProgressBar
                    android:id="@+id/progBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="40dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvNoData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="40dp"
                    android:text="@string/no_data_to_show"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/flSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/book_trans"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/exchange_points"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:padding="8dp"

                        >

                        <Button
                            android:id="@+id/btnOk"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/rounded_color9"
                            android:text="@string/yes"
                            android:textColor="@color/colorPrimary" />

                        <Space
                            android:layout_width="20dp"
                            android:layout_height="0dp" />

                        <Button
                            android:id="@+id/btnCancel"
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/rounded_color6"
                            android:text="@string/no"
                            android:textColor="@color/color11" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/flData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/trans_black"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"


                >


                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:minHeight="140dp"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvResult"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/we_will_contact"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@id/image"
                        app:layout_constraintEnd_toStartOf="@id/tvPoints"
                        app:layout_constraintStart_toEndOf="@id/image"

                        app:layout_constraintTop_toTopOf="@id/image" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="100dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="40dp"
                app:cardElevation="5dp"
                app:contentPadding="0dp"

                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleX="1.3"
                    android:scaleY="1.3"
                    android:src="@drawable/circle_correct" />
            </androidx.cardview.widget.CardView>

        </FrameLayout>

    </FrameLayout>


</layout>
